<resources>
    <string name="app_name">createprofile</string>
    <string name="title_activity_login">Sign in</string>

    <string name="facebook_app_id">2000818746808777</string>
    <string name="fb_login_protocol_scheme">fb2000818746808777</string>


    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in with Email</string>
    <string name="action_sign_in_phone">Sign in with Phone</string>
    <string name="action_sign_up">Sign up</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_invalid_confirmation_password">The confirmation password does not match with password</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="prompt_password_confirmation">Confirm your password</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="not_a_member">Not a Member?</string>
    <string name="enter_phone_number">Enter your phone number to get started</string>
    <string name="enter_verification_code">Enter the verification code</string>
    <string name="send_me_the_code">Send me the code</string>
    <string name="verify_code">Verify code</string>
</resources>
